@startuml

title __HELLO's Class Diagram__\n

  package amqp {
    class Application {
    }
  }
  

  package filestorage {
    class FileController {
    }
  }
  

  package filestorage {
    class FileService {
    }
  }
  

  package websockets {
    class HttpHandshakeInterceptor {
    }
  }
  

  package websockets {
    class Message {
    }
  }
  

  package websockets {
    class MessagingController {
    }
  }
  

  package amqp {
    class Receiver {
    }
  }
  

  package model {
    class Room {
    }
  }
  

  package model {
    class RoomMinified {
    }
  }
  

  package model {
    interface RoomRepository {
    }
  }
  

  package amqp {
    class Runner {
    }
  }
  

  package filestorage {
    class UploadFileResponse {
    }
  }
  

  package model {
    class User {
    }
  }
  

  package model {
    class UserLoader {
    }
  }
  

  package model {
    interface UserRepository {
    }
  }
  

  package websockets {
    class WebSocketConfig {
    }
  }
  

  FileController o-- FileService : fileService
  FileController o-- MessagingController : messagingController
  HttpHandshakeInterceptor -up-|> HandshakeInterceptor
  Message -up-|> Serializable
  MessagingController o-- UserRepository : usersRepository
  MessagingController o-- RoomRepository : roomsRepository
  Receiver o-- MessagingController : wbController
  Runner o-- Receiver : receiver
  UserLoader -up-|> CommandLineRunner
  UserLoader o-- UserRepository : users
  UserLoader o-- RoomRepository : rooms
  UserLoader o-- MessagingController : controller
  WebSocketConfig -up-|> WebSocketMessageBrokerConfigurer
  WebSocketConfig o-- UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
